TINY-8373: Restore correct spacing for tinymce-5 skin statusbar

--- a/modules/oxide/src/less/skins/ui/tinymce-5/skin.less
+++ b/modules/oxide/src/less/skins/ui/tinymce-5/skin.less
@@ -44,6 +44,7 @@
 @textfield-focus-outline: 2px solid fade(@color-tint, 25%);
 @menubar-separator-color: @border-color;
 @menubar-row-separator-color: @border-color;
+@statusbar-padding-x: @pad-sm;
 
 .tox {
   &:not(.tox-tinymce-inline) .tox-editor-header {
